# test_mda_pip_rtd

./: .codecov.yml  .gitignore  .lgtm.yml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gh-ci.yaml
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat  requirements.yaml
test_mda_pip_rtd/: __init__.py  _version.py  test_mda_pip_rtd.py
test_mda_pip_rtd/data/: files.py
test_mda_pip_rtd/tests/: conftest.py  test_test_mda_pip_rtd.py
